    - Two-step country choosing introduced:
      - first choose among "valid" countries (with regards to SUPPORTED from
        the locales package)
      - if the user really wants another country, bring the full world
        country list
      - when a "valid" country is chosen, change locale accordingly
      - current drawback : the first country list is not translated

 -- Bart Cornelis <cobaco@linux.be>  Wed,  4 Feb 2004 15:30:31 +0100

countrychooser (0.002) unstable; urgency=low

  * Bartosz Fenski
    - Added Polish (pl) translation
  * Christian Perrier
    - Adapt to iso-codes file names changes:
      mktemplates: s/iso-/iso_
      get-iso-codes: s/iso-/iso_
      debian/control: versioned Build-Depends on iso-codes >=0.21-1
    - added fake Hebrew translation file to trigger he status pages on
      Denis Barbier pages
    - Changed get-iso-codes so that it does not fail when no
      iso-codes.updates are there
    - Better handling of locale just to be clean (anyway, kbd-chooser will
      most often overwrite the locale we set there)
    - Removed countrymap and countrycodemap scripts. Now included in
      countrychooser as functions. countrymap now works with countries
      including a space in their names such as United States..:-)
  * Carlos Z.F. Liu
    - Update Chinese translation zh_CN.po
  * Joey Hess
    - Move countrychooser into the postinst.
    - Copyright update.
    - Add backup support.
    - Anchor the grep for a country.
    - Add regionmap, countrylist, group list by region.
  * Christian Perrier
    - Updated regionmap
  * Denis Barbier
    - Add regions to the po files.
  * Christian Perrier
    - Added Caribbean to regions
    - rephrased "Americas" to that they are sorted together
    - French translation update
  * Konstantinos Margaritis
    - Updated Greek translation
  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * Bart Cornelis
    - Update Dutch (nl.po) translation
  * Miroslav Kure