@@ -58,6 +58,10 @@ countrychooser (0.003) UNRELEASED; urgency=low
         country list
       - when a "valid" country is chosen, change locale accordingly
       - current drawback : the first country list is not translated
+    - Now uses iso_3166.tab file:
+      - Pre-Depends: iso-3166-udeb
+      - Modified postinst
+      - Removed local iso_3166.tab in /etc
 
  -- Bart Cornelis <cobaco@linux.be>  Wed,  4 Feb 2004 15:30:31 +0100
 
